@@ -1,0 +1,36 @@
+<form id="forms_config_edit" method="post" action="">
+    <div class="span9">
+        {foreach $array_radio_config as $key => $value nocache}
+            {*{if $value@iteration % 2 == 0 && $value@iteration > 0}
+                </div>
+                <div class="row-fluid">
+            {/if}*}
+            {if $value@first}
+                <div class="row-fluid">
+            {elseif ($value@iteration - 1) is div by 2}
+                </div>
+                <div class="row-fluid">
+            {/if}
+            <div class="span4">
+                <h3>
+                    {$key}
+                </h3>
+                <label class="radio inline">
+                    <input type="radio" name="{$key}" id="{$key}" value="0"{if $value eq 0} checked="checked"{/if} />
+                    Désactivé
+                </label>
+                <label class="radio inline">
+                    <input type="radio" name="{$key}" id="{$key}_{$value@iteration}" value="1"{if $value eq 1} checked="checked"{/if} />
+                    Activé
+                </label>
+            </div>
+            {if $value@last}
+            </div>
+            {/if}
+        {/foreach}
+    </div>
+    <div class="clearfix"></div>
+    <p class="input-btn">
+        <input type="submit" class="btn btn-primary" value="Envoyer" />
+    </p>
+</form>
