@@ -1,0 +1,25 @@
+{include file="section/head.phtml"}
+<title>Magix CMS | Admin</title>
+</head>
+<body class="module-cms">
+{include file="section/top.phtml"}
+<div class="container-fluid">
+    <div class="row-fluid">
+    {include file="section/colleft.phtml"}
+        <div class="span9">
+            <div class="row-fluid">
+                <div class="span12">
+                    {*{include file="config/section/nav.phtml"}*}
+                    <h1>Configuration</h1>
+                    <div class="mc-message clearfix"></div>
+                    {include file="config/forms/edit.phtml"}
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+{include file="section/footer.phtml"}
+{include file="section/js.phtml"}
+{include file="config/section/js.phtml"}
+</body>
+</html>
