@@ -1,0 +1,4 @@
+<p class="span6 alert alert-success fade in">
+    <button type="button" class="close" data-dismiss="alert">&times;</button>
+    <span class="icon-ok"></span> La configuration à bien été sauvegardée
+</p>
