@@ -11,6 +11,12 @@ h2{
 h3 {
     font-size: 20.5px;
 }
+/*
+* FORMS
+*/
+.input-btn{
+    margin-top: 15px;
+}
 /**
 * LOGIN
 */
