@@ -21,7 +21,7 @@
                 </span>
                 <input type="password" class="input-large" placeholder="Indiquer le password" id="acpass" name="acpass" value="" />
             </p>
-            <p class="input-btn">
+            <p>
                 <input type="hidden" id="hashtoken" name="hashtoken" value="{$hashpass}" />
                 <input type="submit" class="btn btn-default btn-primary" value="Connexion" />
             </p>
